[package]
name = "csheap"
version = "0.1.8"
edition = "2021"
license = "MIT"
description = "A heap implementation over a vector"
repository = "https://github.com/cstffx/csheap/"
authors = "Elihu Diaz Alvarez"
keywords = "heap structure algorithm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
